@@ -1,3 +1,8 @@
+2012-11-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* filefuncs.c readdir.c, revoutput.c, revtwoway.c, rwarray.c,
+	rwarray0.c, testext.c: Use awk_true and awk_false instead of 1 and 0.
+
 2012-11-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* filefuncs.c (do_stat): Optional third argument indicates to
