@@ -3,6 +3,9 @@
 	* regcomp.c, regex.c, regex_internal.h, regexec.c: Sync
 	with GLIBC.  Why not.
 
+	* gawkapi.c (awk_bool_t): Change into an enum with awk_false and
+	awk_true values.
+
 2012-01-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	Further cleanups of macros in awk.h
